Bug 494781 - No progress on "tasks" section while downloading Flatpak runtimes
Summary: No progress on "tasks" section while downloading Flatpak runtimes
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 496342 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-14 22:44 UTC by Justin Zobel
Modified: 2024-11-18 07:50 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2024-10-14 22:44:32 UTC
SUMMARY
When downloading a flatpak app, the dependencies are not taken into account on the progress bar. This shows no activity at all while dependencies e.g. runtimes are installed.


STEPS TO REPRODUCE
1. Have no flatpaks installed
2. Use Discover to install kalk

OBSERVED RESULT
Tasks view shows no activity, no progress, no download speed while dependency is downloading. See system monitor to confirm downloads are happening via network usage.

EXPECTED RESULT
Dependencies are included in progress, speed shown. Alternatively, just say downloading dependencies until a full solution can be implemented.

SOFTWARE/OS VERSIONS
Operating System: KDE Linux a3f76e06
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.8.0
Qt Version: 6.7.3
Kernel Version: 6.11.3-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 8 x Intel(R) Core(TM) i5-10210U CPU @ 1.60GHz
Memory: 7.5 GiB of RAM
Comment 1 Nate Graham 2024-10-15 22:55:29 UTC
Can reproduce with current git master.
Comment 2 Bug Janitor Service 2024-11-12 08:27:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/970
Comment 3 Harald Sitter 2024-11-15 13:36:42 UTC
Git commit cda3796c5420b20d5aaa9b3502b9417c0b6e5a84 by Harald Sitter.
Committed on 15/11/2024 at 13:30.
Pushed by sitter into branch 'master'.

flatpak: try to tie runtimes to an app ref

this should allow status reporting to work correctly even though we
otherwise ignore runtimes. essentially we try to establish a mapping
from runtime to app ref and then treat the runtime as part of the app
transaction.

M  +44   -9    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp
M  +6    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.h

https://invent.kde.org/plasma/discover/-/commit/cda3796c5420b20d5aaa9b3502b9417c0b6e5a84
Comment 4 Harald Sitter 2024-11-18 07:50:26 UTC
*** Bug 496342 has been marked as a duplicate of this bug. ***