flatpak: try to tie runtimes to an app ref

this should allow status reporting to work correctly even though we
otherwise ignore runtimes. essentially we try to establish a mapping
from runtime to app ref and then treat the runtime as part of the app
transaction.

BUG: 494781